--- a/Data Preprocessing.ipynb
+++ b/Data Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 121,
    "id": "afe99556",
    "metadata": {},
    "outputs": [],
@@ -20,11 +20,12 @@
     "import matplotlib.pyplot as plt\n",
     "import datetime\n",
     "\n",
-    "from sklearn.metrics import balanced_accuracy_score\n",
+    "from sklearn.metrics import accuracy_score\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from imblearn.metrics import classification_report_imbalanced\n",
     "from imblearn.ensemble import BalancedRandomForestClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier"
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import RandomForestRegressor"
    ]
   },
   {
@@ -2284,7 +2285,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "a83ca5ea",
+   "id": "8a92bd5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2295,7 +2296,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "fe1ffeba",
+   "id": "e5fcadf8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2305,7 +2306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf6e8627",
+   "id": "9c787cee",
    "metadata": {},
    "source": [
     "## Prepare Data for Machine Learning Model"
@@ -2313,8 +2314,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "fe4e3a16",
+   "execution_count": 108,
+   "id": "c0505719",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2324,18 +2325,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "3cba5d2b",
+   "execution_count": 109,
+   "id": "558fe4cb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = clustered_data_df[\"temperature_avg\"]"
+    "y = clustered_data_df['temperature_avg']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "c75fb7ca",
+   "execution_count": 110,
+   "id": "0e732326",
    "metadata": {},
    "outputs": [
     {
@@ -2568,7 +2569,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2580,8 +2581,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "4646f6ed",
+   "execution_count": 112,
+   "id": "120e25b2",
    "metadata": {},
    "outputs": [
     {
@@ -2595,7 +2596,7 @@
        "Name: temperature_avg, dtype: float64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2606,8 +2607,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "2fa1b45e",
+   "execution_count": 113,
+   "id": "d2adc5d9",
    "metadata": {},
    "outputs": [
     {
@@ -2639,7 +2640,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2650,37 +2651,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "033d0c92",
+   "execution_count": 114,
+   "id": "a77f3c36",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count    317515.000000\n",
-       "mean         -0.153282\n",
-       "std           3.610791\n",
-       "min         -23.081108\n",
-       "25%          -2.029801\n",
-       "50%           0.080883\n",
-       "75%           1.951281\n",
-       "max          20.057198\n",
-       "Name: temperature_avg, dtype: float64"
+       "dtype('float64')"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y.describe()"
+    "y.dtype"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "a399c117",
+   "execution_count": 115,
+   "id": "184353a5",
    "metadata": {},
    "outputs": [
     {
@@ -2700,7 +2693,7 @@
        "Name: temperature_avg, Length: 135522, dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2712,8 +2705,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "c95fe44d",
+   "execution_count": 116,
+   "id": "e43f440a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2725,7 +2718,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b259b3ec",
+   "id": "63e3161b",
    "metadata": {},
    "source": [
     "### Run the data through Random Forest"
@@ -2733,29 +2726,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "4659fbe4",
+   "execution_count": 102,
+   "id": "f34cb1d4",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Unknown label type: 'continuous'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_17760\\2909623673.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# Fit the model\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mrf_model\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrf_model\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\anaconda3\\envs\\mlenv\\lib\\site-packages\\sklearn\\ensemble\\_forest.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[0;32m    364\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mn_outputs_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    365\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 366\u001b[1;33m         \u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mexpanded_class_weight\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_validate_y_class_weight\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    367\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    368\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"dtype\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mDOUBLE\u001b[0m \u001b[1;32mor\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mflags\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcontiguous\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\envs\\mlenv\\lib\\site-packages\\sklearn\\ensemble\\_forest.py\u001b[0m in \u001b[0;36m_validate_y_class_weight\u001b[1;34m(self, y)\u001b[0m\n\u001b[0;32m    721\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    722\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_validate_y_class_weight\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 723\u001b[1;33m         \u001b[0mcheck_classification_targets\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    724\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    725\u001b[0m         \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\envs\\mlenv\\lib\\site-packages\\sklearn\\utils\\multiclass.py\u001b[0m in \u001b[0;36mcheck_classification_targets\u001b[1;34m(y)\u001b[0m\n\u001b[0;32m    196\u001b[0m         \u001b[1;34m\"multilabel-sequences\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    197\u001b[0m     ]:\n\u001b[1;32m--> 198\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Unknown label type: %r\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0my_type\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    199\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    200\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: Unknown label type: 'continuous'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Resample the training data with the BalancedRandomForestClassifier\n",
+    "# Resample the training data with the RandomForestRegressor\n",
     "# Create a random forest classifier.\n",
-    "rf_model = RandomForestClassifier(n_estimators=100, random_state=78)\n",
+    "rf_model = RandomForestRegressor(n_estimators=100, random_state=78)\n",
     "\n",
     "# Fit the model\n",
     "rf_model = rf_model.fit(X_train, y_train)"
@@ -2763,8 +2741,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 117,
+   "id": "035757c0",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Making predictions using the testing data.\n",
+    "predictions = rf_model.predict(X_test)\n",
+    "                               \n",
+    "# Calculating the accuracy score.\n",
+    "# acc_score = accuracy_score(y_test, predictions)\n",
+    "# acc_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "6b69b6c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Unknown label type: (171943    2.191718\n150833   -5.884087\n36755    -0.965383\n41636     0.598975\n158387    4.469540\n            ...   \n231686   -1.471182\n58543    -1.037688\n187741    1.653904\n32673    -1.834622\n136262   -0.697285\nName: temperature_avg, Length: 79379, dtype: float64, array([ 2.06796111, -5.92359565, -2.17400896, ...,  1.59458806,\n        0.52534741, -0.6602042 ]))",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_17760\\4063485821.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Print the imbalanced classification report\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mclassification_report_imbalanced\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpredictions\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\anaconda3\\envs\\mlenv\\lib\\site-packages\\imblearn\\utils\\_validation.py\u001b[0m in \u001b[0;36minner_f\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    591\u001b[0m             )\n\u001b[0;32m    592\u001b[0m         \u001b[0mkwargs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m{\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0marg\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0marg\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msig\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 593\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    594\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    595\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0minner_f\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\mlenv\\lib\\site-packages\\imblearn\\metrics\\_classification.py\u001b[0m in \u001b[0;36mclassification_report_imbalanced\u001b[1;34m(y_true, y_pred, labels, target_names, sample_weight, digits, alpha, output_dict, zero_division)\u001b[0m\n\u001b[0;32m    878\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    879\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mlabels\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 880\u001b[1;33m         \u001b[0mlabels\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0munique_labels\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    881\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    882\u001b[0m         \u001b[0mlabels\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\mlenv\\lib\\site-packages\\sklearn\\utils\\multiclass.py\u001b[0m in \u001b[0;36munique_labels\u001b[1;34m(*ys)\u001b[0m\n\u001b[0;32m    100\u001b[0m     \u001b[0m_unique_labels\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_FN_UNIQUE_LABELS\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabel_type\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    101\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0m_unique_labels\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 102\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Unknown label type: %s\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mrepr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mys\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    103\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    104\u001b[0m     \u001b[0mys_labels\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mchain\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfrom_iterable\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_unique_labels\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0my\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mys\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: Unknown label type: (171943    2.191718\n150833   -5.884087\n36755    -0.965383\n41636     0.598975\n158387    4.469540\n            ...   \n231686   -1.471182\n58543    -1.037688\n187741    1.653904\n32673    -1.834622\n136262   -0.697285\nName: temperature_avg, Length: 79379, dtype: float64, array([ 2.06796111, -5.92359565, -2.17400896, ...,  1.59458806,\n        0.52534741, -0.6602042 ]))"
+     ]
+    }
+   ],
+   "source": [
+    "# Print the imbalanced classification report\n",
+    "print(classification_report_imbalanced(y_test, predictions))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "77e96655",
+   "id": "a3aa6a9d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2772,7 +2793,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c99ee0d2",
+   "id": "5d73da7d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2780,23 +2801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "704bd77a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6856f577",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0fdb6476",
+   "id": "2107d2da",
    "metadata": {},
    "outputs": [],
    "source": []
