--- a/Machine Learning Model.ipynb
+++ b/Machine Learning Model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "b80862ea",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
     "from sklearn.metrics import balanced_accuracy_score\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from imblearn.metrics import classification_report_imbalanced\n",
-    "from imblearn.ensemble import BalancedRandomForestClassifier\n"
+    "from sklearn.ensemble import RandomForestRegressor\n"
    ]
   },
   {
@@ -2354,14 +2354,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d434a4bb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'X_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_12712\\562456446.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# Fit the model\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mrf_model\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrf_model\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'X_train' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Resample the training data with the BalancedRandomForestClassifier\n",
     "# Create a random forest classifier.\n",
-    "rf_model = BalancedRandomForestClassifier(n_estimators=100, random_state=78)\n",
+    "rf_model = RandomForestRegressor(n_estimators=100, random_state=78)\n",
     "\n",
     "# Fit the model\n",
     "rf_model = rf_model.fit(X_train, y_train)"
