--- a/Data Preprocessing.ipynb
+++ b/Data Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 3,
    "id": "afe99556",
    "metadata": {},
    "outputs": [],
@@ -32,141 +32,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "id": "75c293a6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>created_at</th>\n",
-       "      <th>id</th>\n",
-       "      <th>lng</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>topic</th>\n",
-       "      <th>sentiment</th>\n",
-       "      <th>stance</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>temperature_avg</th>\n",
-       "      <th>aggressiveness</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2006-06-06 16:06:42+00:00</td>\n",
-       "      <td>6132.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Weather Extremes</td>\n",
-       "      <td>-0.097180</td>\n",
-       "      <td>neutral</td>\n",
-       "      <td>female</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>aggressive</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2006-07-23 21:52:30+00:00</td>\n",
-       "      <td>13275.0</td>\n",
-       "      <td>-73.949582</td>\n",
-       "      <td>40.650104</td>\n",
-       "      <td>Weather Extremes</td>\n",
-       "      <td>0.575777</td>\n",
-       "      <td>neutral</td>\n",
-       "      <td>undefined</td>\n",
-       "      <td>-1.114768</td>\n",
-       "      <td>aggressive</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2006-08-29 01:52:30+00:00</td>\n",
-       "      <td>23160.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Weather Extremes</td>\n",
-       "      <td>0.500479</td>\n",
-       "      <td>neutral</td>\n",
-       "      <td>male</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>aggressive</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2006-11-07 02:46:52+00:00</td>\n",
-       "      <td>57868.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Weather Extremes</td>\n",
-       "      <td>0.032816</td>\n",
-       "      <td>neutral</td>\n",
-       "      <td>male</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>aggressive</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2006-11-27 14:27:43+00:00</td>\n",
-       "      <td>304553.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Importance of Human Intervantion</td>\n",
-       "      <td>-0.090428</td>\n",
-       "      <td>neutral</td>\n",
-       "      <td>male</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>aggressive</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  created_at        id        lng        lat  \\\n",
-       "0  2006-06-06 16:06:42+00:00    6132.0        NaN        NaN   \n",
-       "1  2006-07-23 21:52:30+00:00   13275.0 -73.949582  40.650104   \n",
-       "2  2006-08-29 01:52:30+00:00   23160.0        NaN        NaN   \n",
-       "3  2006-11-07 02:46:52+00:00   57868.0        NaN        NaN   \n",
-       "4  2006-11-27 14:27:43+00:00  304553.0        NaN        NaN   \n",
-       "\n",
-       "                              topic  sentiment   stance     gender  \\\n",
-       "0                  Weather Extremes  -0.097180  neutral     female   \n",
-       "1                  Weather Extremes   0.575777  neutral  undefined   \n",
-       "2                  Weather Extremes   0.500479  neutral       male   \n",
-       "3                  Weather Extremes   0.032816  neutral       male   \n",
-       "4  Importance of Human Intervantion  -0.090428  neutral       male   \n",
-       "\n",
-       "   temperature_avg aggressiveness  \n",
-       "0              NaN     aggressive  \n",
-       "1        -1.114768     aggressive  \n",
-       "2              NaN     aggressive  \n",
-       "3              NaN     aggressive  \n",
-       "4              NaN     aggressive  "
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load the data\n",
     "cc_df = pd.read_csv(\"../climate_change_twitter.csv\")\n",
@@ -3394,9 +3263,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:mlenv] *",
+   "display_name": "mlenv",
    "language": "python",
-   "name": "conda-env-mlenv-py"
+   "name": "mlenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3408,7 +3277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.15"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
