adding new kernel with cleaned data preprocessing and further ml model exploration

--- a/Machine Learning Model (1).ipynb
+++ b/Machine Learning Model (1).ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "b80862ea",
    "metadata": {
     "id": "b80862ea"
@@ -104,6 +104,7 @@
     "import sqlalchemy\n",
     "from sqlalchemy import create_engine\n",
     "from sklearn.model_selection import train_test_split\n",
+    "import psycopg2\n",
     "\n",
     "from sklearn.metrics import balanced_accuracy_score\n",
     "from sklearn.metrics import confusion_matrix\n",
@@ -124,10 +125,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "9ea8ca95",
    "metadata": {
-    "id": "9ea8ca95"
+    "id": "9ea8ca95",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -167,7 +169,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2006-06-06</td>\n",
-       "      <td>6132</td>\n",
+       "      <td>6.132000e+03</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Weather Extremes</td>\n",
@@ -180,7 +182,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2006-07-23</td>\n",
-       "      <td>13275</td>\n",
+       "      <td>1.327500e+04</td>\n",
        "      <td>-73.949582</td>\n",
        "      <td>40.650104</td>\n",
        "      <td>Weather Extremes</td>\n",
@@ -193,7 +195,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2006-08-29</td>\n",
-       "      <td>23160</td>\n",
+       "      <td>2.316000e+04</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Weather Extremes</td>\n",
@@ -206,7 +208,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2006-11-07</td>\n",
-       "      <td>57868</td>\n",
+       "      <td>5.786800e+04</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Weather Extremes</td>\n",
@@ -219,7 +221,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2006-11-27</td>\n",
-       "      <td>304553</td>\n",
+       "      <td>3.045530e+05</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Importance of Human Intervantion</td>\n",
@@ -243,119 +245,119 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15789406</th>\n",
-       "      <td>2019-10-01</td>\n",
-       "      <td>1178910045783937024</td>\n",
+       "      <th>1048570</th>\n",
+       "      <td>2011-03-29</td>\n",
+       "      <td>5.267250e+16</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Global stance</td>\n",
-       "      <td>-0.010875</td>\n",
+       "      <td>Ideological Positions on Global Warming</td>\n",
+       "      <td>-0.520443</td>\n",
        "      <td>believer</td>\n",
+       "      <td>female</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>not aggressive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1048571</th>\n",
+       "      <td>2011-03-29</td>\n",
+       "      <td>5.267250e+16</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ideological Positions on Global Warming</td>\n",
+       "      <td>-0.173758</td>\n",
+       "      <td>neutral</td>\n",
        "      <td>male</td>\n",
        "      <td>NaN</td>\n",
        "      <td>not aggressive</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15789407</th>\n",
-       "      <td>2019-10-01</td>\n",
-       "      <td>1178910117095305216</td>\n",
-       "      <td>-118.243680</td>\n",
-       "      <td>34.052230</td>\n",
-       "      <td>Global stance</td>\n",
-       "      <td>-0.685905</td>\n",
-       "      <td>believer</td>\n",
-       "      <td>female</td>\n",
-       "      <td>-3.126811</td>\n",
-       "      <td>not aggressive</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15789408</th>\n",
-       "      <td>2019-10-01</td>\n",
-       "      <td>1178910821750992896</td>\n",
-       "      <td>100.501440</td>\n",
-       "      <td>13.753980</td>\n",
-       "      <td>Politics</td>\n",
-       "      <td>0.343705</td>\n",
+       "      <th>1048572</th>\n",
+       "      <td>2011-03-29</td>\n",
+       "      <td>5.267310e+16</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ideological Positions on Global Warming</td>\n",
+       "      <td>0.536049</td>\n",
        "      <td>neutral</td>\n",
-       "      <td>female</td>\n",
-       "      <td>-0.364467</td>\n",
-       "      <td>not aggressive</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15789409</th>\n",
-       "      <td>2019-10-01</td>\n",
-       "      <td>1178911073371643904</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Politics</td>\n",
-       "      <td>-0.088496</td>\n",
-       "      <td>believer</td>\n",
-       "      <td>female</td>\n",
+       "      <td>male</td>\n",
        "      <td>NaN</td>\n",
        "      <td>not aggressive</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15789410</th>\n",
-       "      <td>2019-10-01</td>\n",
-       "      <td>1178911891285917696</td>\n",
+       "      <th>1048573</th>\n",
+       "      <td>2011-03-29</td>\n",
+       "      <td>5.267330e+16</td>\n",
+       "      <td>0.006856</td>\n",
+       "      <td>51.550641</td>\n",
+       "      <td>Donald Trump versus Science</td>\n",
+       "      <td>0.616270</td>\n",
+       "      <td>neutral</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1.703617</td>\n",
+       "      <td>not aggressive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1048574</th>\n",
+       "      <td>2011-03-29</td>\n",
+       "      <td>5.267370e+16</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Global stance</td>\n",
-       "      <td>-0.685905</td>\n",
+       "      <td>0.158936</td>\n",
        "      <td>believer</td>\n",
-       "      <td>female</td>\n",
+       "      <td>male</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>not aggressive</td>\n",
+       "      <td>aggressive</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>15789411 rows × 10 columns</p>\n",
+       "<p>1048575 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          created_at                   id         lng        lat  \\\n",
-       "0         2006-06-06                 6132         NaN        NaN   \n",
-       "1         2006-07-23                13275  -73.949582  40.650104   \n",
-       "2         2006-08-29                23160         NaN        NaN   \n",
-       "3         2006-11-07                57868         NaN        NaN   \n",
-       "4         2006-11-27               304553         NaN        NaN   \n",
-       "...              ...                  ...         ...        ...   \n",
-       "15789406  2019-10-01  1178910045783937024         NaN        NaN   \n",
-       "15789407  2019-10-01  1178910117095305216 -118.243680  34.052230   \n",
-       "15789408  2019-10-01  1178910821750992896  100.501440  13.753980   \n",
-       "15789409  2019-10-01  1178911073371643904         NaN        NaN   \n",
-       "15789410  2019-10-01  1178911891285917696         NaN        NaN   \n",
+       "         created_at            id        lng        lat  \\\n",
+       "0        2006-06-06  6.132000e+03        NaN        NaN   \n",
+       "1        2006-07-23  1.327500e+04 -73.949582  40.650104   \n",
+       "2        2006-08-29  2.316000e+04        NaN        NaN   \n",
+       "3        2006-11-07  5.786800e+04        NaN        NaN   \n",
+       "4        2006-11-27  3.045530e+05        NaN        NaN   \n",
+       "...             ...           ...        ...        ...   \n",
+       "1048570  2011-03-29  5.267250e+16        NaN        NaN   \n",
+       "1048571  2011-03-29  5.267250e+16        NaN        NaN   \n",
+       "1048572  2011-03-29  5.267310e+16        NaN        NaN   \n",
+       "1048573  2011-03-29  5.267330e+16   0.006856  51.550641   \n",
+       "1048574  2011-03-29  5.267370e+16        NaN        NaN   \n",
        "\n",
-       "                                     topic  sentiment    stance     gender  \\\n",
-       "0                         Weather Extremes  -0.097180   neutral     female   \n",
-       "1                         Weather Extremes   0.575777   neutral  undefined   \n",
-       "2                         Weather Extremes   0.500479   neutral       male   \n",
-       "3                         Weather Extremes   0.032816   neutral       male   \n",
-       "4         Importance of Human Intervantion  -0.090428   neutral       male   \n",
-       "...                                    ...        ...       ...        ...   \n",
-       "15789406                     Global stance  -0.010875  believer       male   \n",
-       "15789407                     Global stance  -0.685905  believer     female   \n",
-       "15789408                          Politics   0.343705   neutral     female   \n",
-       "15789409                          Politics  -0.088496  believer     female   \n",
-       "15789410                     Global stance  -0.685905  believer     female   \n",
+       "                                           topic  sentiment    stance  \\\n",
+       "0                               Weather Extremes  -0.097180   neutral   \n",
+       "1                               Weather Extremes   0.575777   neutral   \n",
+       "2                               Weather Extremes   0.500479   neutral   \n",
+       "3                               Weather Extremes   0.032816   neutral   \n",
+       "4               Importance of Human Intervantion  -0.090428   neutral   \n",
+       "...                                          ...        ...       ...   \n",
+       "1048570  Ideological Positions on Global Warming  -0.520443  believer   \n",
+       "1048571  Ideological Positions on Global Warming  -0.173758   neutral   \n",
+       "1048572  Ideological Positions on Global Warming   0.536049   neutral   \n",
+       "1048573              Donald Trump versus Science   0.616270   neutral   \n",
+       "1048574                            Global stance   0.158936  believer   \n",
        "\n",
-       "          temperature   agressiveness  \n",
-       "0                 NaN      aggressive  \n",
-       "1           -1.114768      aggressive  \n",
-       "2                 NaN      aggressive  \n",
-       "3                 NaN      aggressive  \n",
-       "4                 NaN      aggressive  \n",
-       "...               ...             ...  \n",
-       "15789406          NaN  not aggressive  \n",
-       "15789407    -3.126811  not aggressive  \n",
-       "15789408    -0.364467  not aggressive  \n",
-       "15789409          NaN  not aggressive  \n",
-       "15789410          NaN  not aggressive  \n",
+       "            gender  temperature   agressiveness  \n",
+       "0           female          NaN      aggressive  \n",
+       "1        undefined    -1.114768      aggressive  \n",
+       "2             male          NaN      aggressive  \n",
+       "3             male          NaN      aggressive  \n",
+       "4             male          NaN      aggressive  \n",
+       "...            ...          ...             ...  \n",
+       "1048570     female          NaN  not aggressive  \n",
+       "1048571       male          NaN  not aggressive  \n",
+       "1048572       male          NaN  not aggressive  \n",
+       "1048573       male     1.703617  not aggressive  \n",
+       "1048574       male          NaN      aggressive  \n",
        "\n",
-       "[15789411 rows x 10 columns]"
+       "[1048575 rows x 10 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +366,7 @@
     "# Create the connection to postgres\n",
     "#engine = create_engine('postgresql://username:password@host:port/dbname')\n",
     "\n",
-    "db_string = f\"postgresql://postgres:{password}@127.0.0.1:5432/Climate_Change_Twitter\"\n",
+    "db_string = f\"postgresql://postgres:{password}@127.0.0.1:5432/climate-change-twitter\"\n",
     "#engine = sqlalchemy.create_engine('postgresql://postgres:mypassword@localhost:5433/dvdrental')\n",
     "\n",
     "engine = create_engine(db_string)\n",
@@ -2468,7 +2470,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.7.15"
   }
  },
  "nbformat": 4,
